<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Fragments_Profile.Step2">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:theme="@style/AppTheme">

            <TextView
                android:id="@+id/Etape1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/create_profile_etape1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textviewDétailsProfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:fontFamily="sans-serif-light"
                android:padding="5dp"
                android:text="@string/create_profile"
                android:textAlignment="center"
                android:textColor="@color/lightPrimaryColor"
                android:textSize="36sp"
                android:textStyle="bold"
                android:typeface="monospace" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_profile_prénom"
                android:textColorHint="@color/gen_black"
                android:inputType="textPersonName"
                app:met_baseColor="@color/colorText"
                app:met_clearButton="true"
                app:met_errorColor="#F44336"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_profile_nom"
                android:inputType="textPersonName"
                android:textColorHint="@color/gen_black"
                app:met_baseColor="@color/colorText"
                app:met_clearButton="true"
                app:met_errorColor="#F44336"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent" />

            <!-- l utilisation de focusableInTouchMode=false Because when the EditText is first touched it calls the focus event and on second touch it call the click event so you have to disable the focus event first. -->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/date_naisse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_profile_date_de_naissance"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName"
                android:textColorHint="@color/gen_black"
                app:met_baseColor="@color/colorText"
                app:met_clearButton="true"
                app:met_errorColor="#F44336"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_profile_sexe"
                android:textAlignment="viewStart"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/H"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="Homme"
                    android:textColor="@color/colorText"
                    android:textSize="16dp"
                    android:textAlignment="viewStart"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/F"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorText"
                    android:padding="10dp"
                    android:textSize="16dp"
                    android:layout_margin="10dp"
                    android:textAlignment="viewStart"
                    android:textStyle="bold"
                    android:text="Femme" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>