<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:theme="@style/AppTheme">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="385dp"
                android:layout_height="191dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/logo2" />

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_cardCollapsedHeight="1dp"
                app:mtf_image="@drawable/email"
                app:mtf_labelColor="@color/colorAccent2">

                <EditText
                    android:id="@+id/InputLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email"
                    android:textColor="#34495e" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:mtf_cardCollapsedHeight="1dp"
                app:mtf_image="@drawable/password"
                app:mtf_labelColor="@color/colorAccent2">

                <EditText
                    android:id="@+id/InputLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:textColor="#34495e" />

            </com.github.florent37.materialtextfield.MaterialTextField>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/BtnLoginLogin"
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login_button"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/fonts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/login_divider"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/BtnLoginRegister"
                    style="@style/fonts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_creation_compte" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>