<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Fragments_Profile.Step1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:theme="@style/AppTheme">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:fontFamily="sans-serif-light"
                android:padding="5dp"
                android:text="@string/register_compte"
                android:textAlignment="center"
                android:textColor="@color/lightPrimaryColor"
                android:textSize="36sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_cardCollapsedHeight="1dp"
                app:mtf_image="@drawable/email"
                app:mtf_labelColor="@color/colorAccent2">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email"
                    android:textColor="#34495e" />

            </com.github.florent37.materialtextfield.MaterialTextField>


            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_cardCollapsedHeight="1dp"
                app:mtf_image="@drawable/password"
                android:inputType="textPassword"
                app:mtf_labelColor="@color/colorAccent2">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:textColor="#34495e" />

            </com.github.florent37.materialtextfield.MaterialTextField>



            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_cardCollapsedHeight="1dp"
                app:mtf_image="@drawable/password"
                app:mtf_labelColor="@color/colorAccent2">

                <EditText
                    android:id="@+id/confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_reenter_password"
                    android:inputType="textPassword"
                    android:textColor="#34495e" />

            </com.github.florent37.materialtextfield.MaterialTextField>



        </LinearLayout>

    </ScrollView>

</FrameLayout>